[package]
name = "sully_peg"
version = "0.1.0"
authors = ["Sullivan Muse <sullivan.muse@gmail.com>"]
edition = "2018"
license = "GPL-3.0-only"
description = "Proc macro for PEG generation"
readme = "README.md"
repository = "https://github.com/SullivanMuse/sully_peg"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = {version = "1.0", features = ["extra-traits", "parsing", "full"]}
quote = "1.0"
proc-macro2 = "1.0.24"
sully_graph = "0.1.0"

[dev-dependencies]
cargo-husky = "1.5.0"
